--- a/Maori Dictionary Lookup/Maori Dictionary Lookup.csproj
+++ b/Maori Dictionary Lookup/Maori Dictionary Lookup.csproj
@@ -7,11 +7,12 @@
     <ProjectGuid>{D3DB9920-0854-4B29-85BC-28548006FCEB}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Populate_Database_Tool</RootNamespace>
-    <AssemblyName>Populate_Database_Tool</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>Maori_Dictionary_Lookup</RootNamespace>
+    <AssemblyName>Maori_Dictionary_Lookup</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -70,6 +71,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
